--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	<header>
 		<h2 style="color: red">dsdsd</h2>
 	</header>
-
+	<main>
+		<img src="eminem-cover-story-4.jpg" alt="sdsd" width="200px">
+	</main>
 	<footer>
 		<p>&copy;2018 boba</p>
 	</footer>
